err/products.digestocontenttypes.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/Extensions'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/browser'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/browser/resources'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/browser/templates'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/content'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/i18n'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/locales'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/model'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/portlets'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default/workflows/area_workflow'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default/workflows/attachment_workflow'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/default/workflows/normativa_workflow'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/extra'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/profiles/extra/types'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/skins'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/skins/digestocontenttypes_images'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/skins/digestocontenttypes_styles'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/skins/digestocontenttypes_templates'...
Compiling './lib/python3.5/site-packages/Products/DigestoContentTypes/skins/digestocontenttypes_templates/normativa_livesearch_reply.py'...
***   File "./lib/python3.5/site-packages/Products/DigestoContentTypes/skins/digestocontenttypes_templates/normativa_livesearch_reply.py", line 156
    return '\n'.join(output).encode(site_encoding)
                                                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/tests'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/tests/input'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/utilities'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/validators'...
Listing './lib/python3.5/site-packages/Products/DigestoContentTypes/widget'...
Listing './lib/python3.5/site-packages/Products.DigestoContentTypes-1.2a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
